--- a/closure-compiler.ini
+++ b/closure-compiler.ini
@@ -28,7 +28,7 @@ charset=euc-kr
 ;                                          encies option will be set to true and
 ;                                          all files will be sorted in dependency
 ;                                           order.
-closure_entry_point=
+closure_entry_point=JGM
 
 
 ; --compilation_level [WHITESPACE_ONLY | : Specifies the compilation level to use
@@ -44,7 +44,7 @@ compilation_level=SIMPLE_OPTIMIZATIONS
 ;                                          s flag cannot be used in conjunction w
 ;                                          ith either variable_map_output_file or
 ;                                           property_map_output_file
-create_name_map_files=
+create_name_map_files=FLAG_SET
 
 
 ; --create_source_map VAL                : If specified, a source map file mappin
@@ -54,7 +54,7 @@ create_name_map_files=
 ;                                          placeholder will expand to the name of
 ;                                           the output file that the source map c
 ;                                          orresponds to.
-create_source_map=
+create_source_map=source-map/%outname%.js
 
 
 ; --debug                                : Enable debugging options
@@ -86,12 +86,12 @@ flagfile=
 ; UT_DELIMITER]                          :  any, should be applied to the output
 ;                                          JS. Options: PRETTY_PRINT, PRINT_INPUT
 ;                                          _DELIMITER
-formatting=
+formatting=PRETTY_PRINT
 
 
 ; --generate_exports                     : Generates export code for those marked
 ;                                           with @export
-generate_exports=
+generate_exports=FLAG_SET
 
 
 ; --help                                 : Displays this message
@@ -211,7 +211,7 @@ module_wrapper=
 ;                                           If you're using modularization, using
 ;                                           %outname% will create a manifest for
 ;                                          each module.
-output_manifest=
+output_manifest=manifest/%outname%
 
 
 ; --output_wrapper VAL                   : Interpolate output into this string at
@@ -222,16 +222,16 @@ output_wrapper=
 
 ; --print_ast                            : Prints a dot file describing the inter
 ;                                          nal abstract syntax tree and exits
-print_ast=
+print_ast=FLAG_SET
 
 
 ; --print_pass_graph                     : Prints a dot file describing the passe
 ;                                          s that will get run and exits
-print_pass_graph=
+print_pass_graph=FLAG_SET
 
 
 ; --print_tree                           : Prints out the parse tree and exits
-print_tree=
+print_tree=FLAG_SET
 
 
 ; --process_closure_primitives           : Processes built-ins from the Closure l
@@ -259,12 +259,12 @@ property_map_output_file=
 ;                                          ary if type checking is on, see --chec
 ;                                          k_types), 3 (always print summary). Th
 ;                                          e default level is 1
-summary_detail_level=
+summary_detail_level=3
 
 
 ; --third_party                          : Check source validity but do not enfor
 ;                                          ce Closure style rules and conventions
-third_party=
+third_party=FLAG_SET
 
 
 ; --use_only_custom_externs              : Specifies whether the default externs
@@ -290,4 +290,4 @@ version=FLAG_SET
 
 ; --warning_level [QUIET | DEFAULT | VER : Specifies the warning level to use. Op
 ; BOSE]                                  : tions: QUIET, DEFAULT, VERBOSE
-warning_level=
+warning_level=VERBOSE
