trying to figure out closure-compiler

--- a/closure-compiler.ini
+++ b/closure-compiler.ini
@@ -34,6 +34,7 @@ closure_entry_point=JGM
 ; --compilation_level [WHITESPACE_ONLY | : Specifies the compilation level to use
 ;  SIMPLE_OPTIMIZATIONS | ADVANCED_OPTIM : . Options: WHITESPACE_ONLY, SIMPLE_OPT
 ; IZATIONS]                              : IMIZATIONS, ADVANCED_OPTIMIZATIONS
+;compilation_level=SIMPLE_OPTIMIZATIONS
 compilation_level=SIMPLE_OPTIMIZATIONS
 
 
@@ -44,7 +45,7 @@ compilation_level=SIMPLE_OPTIMIZATIONS
 ;                                          s flag cannot be used in conjunction w
 ;                                          ith either variable_map_output_file or
 ;                                           property_map_output_file
-create_name_map_files=FLAG_SET
+create_name_map_files=
 
 
 ; --create_source_map VAL                : If specified, a source map file mappin
@@ -54,7 +55,8 @@ create_name_map_files=FLAG_SET
 ;                                          placeholder will expand to the name of
 ;                                           the output file that the source map c
 ;                                          orresponds to.
-create_source_map=source-map/%outname%.js
+;create_source_map=outputs/source_map.out
+create_source_map=
 
 
 ; --debug                                : Enable debugging options
@@ -91,7 +93,7 @@ formatting=PRETTY_PRINT
 
 ; --generate_exports                     : Generates export code for those marked
 ;                                           with @export
-generate_exports=FLAG_SET
+generate_exports=
 
 
 ; --help                                 : Displays this message
@@ -211,7 +213,8 @@ module_wrapper=
 ;                                           If you're using modularization, using
 ;                                           %outname% will create a manifest for
 ;                                          each module.
-output_manifest=manifest/%outname%
+;output_manifest=outputs/manifest.out
+output_manifest=
 
 
 ; --output_wrapper VAL                   : Interpolate output into this string at
@@ -222,16 +225,16 @@ output_wrapper=
 
 ; --print_ast                            : Prints a dot file describing the inter
 ;                                          nal abstract syntax tree and exits
-print_ast=FLAG_SET
+print_ast=
 
 
 ; --print_pass_graph                     : Prints a dot file describing the passe
 ;                                          s that will get run and exits
-print_pass_graph=FLAG_SET
+print_pass_graph=
 
 
 ; --print_tree                           : Prints out the parse tree and exits
-print_tree=FLAG_SET
+print_tree=
 
 
 ; --process_closure_primitives           : Processes built-ins from the Closure l
@@ -249,6 +252,7 @@ property_map_input_file=
 ; --property_map_output_file VAL         : File where the serialized version of t
 ;                                          he property renaming map produced shou
 ;                                          ld be saved
+;property_map_output_file=outputs/property_map.out
 property_map_output_file=
 
 
@@ -281,6 +285,7 @@ variable_map_input_file=
 ; --variable_map_output_file VAL         : File where the serialized version of t
 ;                                          he variable renaming map produced shou
 ;                                          ld be saved
+;variable_map_output_file=outputs/variable_map.out
 variable_map_output_file=
 
 
