--- a/closure-compiler.ini
+++ b/closure-compiler.ini
@@ -28,14 +28,14 @@ charset=euc-kr
 ;                                          encies option will be set to true and
 ;                                          all files will be sorted in dependency
 ;                                           order.
-closure_entry_point=JGM
+closure_entry_point=test.test1
 
 
 ; --compilation_level [WHITESPACE_ONLY | : Specifies the compilation level to use
 ;  SIMPLE_OPTIMIZATIONS | ADVANCED_OPTIM : . Options: WHITESPACE_ONLY, SIMPLE_OPT
 ; IZATIONS]                              : IMIZATIONS, ADVANCED_OPTIMIZATIONS
 ;compilation_level=SIMPLE_OPTIMIZATIONS
-compilation_level=SIMPLE_OPTIMIZATIONS
+compilation_level=ADVANCED_OPTIMIZATIONS
 
 
 ; --create_name_map_files                : If true, variable renaming and propert
