--- a/closure-compiler.ini
+++ b/closure-compiler.ini
@@ -28,7 +28,7 @@ charset=euc-kr
 ;                                          encies option will be set to true and
 ;                                          all files will be sorted in dependency
 ;                                           order.
-closure_entry_point=test.test1
+closure_entry_point=JGM
 
 
 ; --compilation_level [WHITESPACE_ONLY | : Specifies the compilation level to use
