--- a/closure-compiler.ini
+++ b/closure-compiler.ini
@@ -35,7 +35,7 @@ closure_entry_point=JGM
 ;  SIMPLE_OPTIMIZATIONS | ADVANCED_OPTIM : . Options: WHITESPACE_ONLY, SIMPLE_OPT
 ; IZATIONS]                              : IMIZATIONS, ADVANCED_OPTIMIZATIONS
 ;compilation_level=SIMPLE_OPTIMIZATIONS
-compilation_level=ADVANCED_OPTIMIZATIONS
+compilation_level=SIMPLE_OPTIMIZATIONS
 
 
 ; --create_name_map_files                : If true, variable renaming and propert
@@ -55,8 +55,8 @@ create_name_map_files=
 ;                                          placeholder will expand to the name of
 ;                                           the output file that the source map c
 ;                                          orresponds to.
-;create_source_map=outputs/source_map.out
-create_source_map=
+create_source_map=outputs/source_map.out
+;create_source_map=
 
 
 ; --debug                                : Enable debugging options
@@ -213,14 +213,15 @@ module_wrapper=
 ;                                           If you're using modularization, using
 ;                                           %outname% will create a manifest for
 ;                                          each module.
-;output_manifest=outputs/manifest.out
-output_manifest=
+output_manifest=outputs/manifest.out
+;output_manifest=
 
 
 ; --output_wrapper VAL                   : Interpolate output into this string at
 ;                                           the place denoted by the marker token
 ;                                           %output%. See --output_wrapper_marker
-output_wrapper=
+output_wrapper='"(function(){%output%})();"'
+
 
 
 ; --print_ast                            : Prints a dot file describing the inter
@@ -252,8 +253,8 @@ property_map_input_file=
 ; --property_map_output_file VAL         : File where the serialized version of t
 ;                                          he property renaming map produced shou
 ;                                          ld be saved
-;property_map_output_file=outputs/property_map.out
-property_map_output_file=
+property_map_output_file=outputs/property_map.out
+;property_map_output_file=
 
 
 ; --summary_detail_level N               : Controls how detailed the compilation
@@ -285,8 +286,8 @@ variable_map_input_file=
 ; --variable_map_output_file VAL         : File where the serialized version of t
 ;                                          he variable renaming map produced shou
 ;                                          ld be saved
-;variable_map_output_file=outputs/variable_map.out
-variable_map_output_file=
+variable_map_output_file=outputs/variable_map.out
+;variable_map_output_file=
 
 
 ; --version                              : Prints the compiler version to stderr.
@@ -295,4 +296,4 @@ version=FLAG_SET
 
 ; --warning_level [QUIET | DEFAULT | VER : Specifies the warning level to use. Op
 ; BOSE]                                  : tions: QUIET, DEFAULT, VERBOSE
-warning_level=VERBOSE
+warning_level=QUIET
