--- a/closure-compiler.ini
+++ b/closure-compiler.ini
@@ -28,14 +28,14 @@ charset=euc-kr
 ;                                          encies option will be set to true and
 ;                                          all files will be sorted in dependency
 ;                                           order.
-closure_entry_point=JGM
+closure_entry_point=jx.grid
 
 
 ; --compilation_level [WHITESPACE_ONLY | : Specifies the compilation level to use
 ;  SIMPLE_OPTIMIZATIONS | ADVANCED_OPTIM : . Options: WHITESPACE_ONLY, SIMPLE_OPT
 ; IZATIONS]                              : IMIZATIONS, ADVANCED_OPTIMIZATIONS
 ;compilation_level=SIMPLE_OPTIMIZATIONS
-compilation_level=SIMPLE_OPTIMIZATIONS
+compilation_level=ADVANCED_OPTIMIZATIONS
 
 
 ; --create_name_map_files                : If true, variable renaming and propert
@@ -88,7 +88,8 @@ flagfile=
 ; UT_DELIMITER]                          :  any, should be applied to the output
 ;                                          JS. Options: PRETTY_PRINT, PRINT_INPUT
 ;                                          _DELIMITER
-formatting=PRETTY_PRINT
+;formatting=PRETTY_PRINT
+formatting=PRINT_INPUT_DELIMITER
 
 
 ; --generate_exports                     : Generates export code for those marked
