--- a/closure-compiler.ini
+++ b/closure-compiler.ini
@@ -60,7 +60,7 @@ create_source_map=outputs/source_map.out
 
 
 ; --debug                                : Enable debugging options
-debug=
+debug=false
 
 
 ; --define (--D, -D) VAL                 : Override the value of a variable annot
