--- a/closure-compiler.ini
+++ b/closure-compiler.ini
@@ -88,7 +88,7 @@ flagfile=
 ; UT_DELIMITER]                          :  any, should be applied to the output
 ;                                          JS. Options: PRETTY_PRINT, PRINT_INPUT
 ;                                          _DELIMITER
-;formatting=PRETTY_PRINT
+formatting=PRETTY_PRINT
 ;formatting=PRINT_INPUT_DELIMITER
 
 
